--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
   "scripts": {
     "start": "node api/server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/SofiDevO/alurageek-API.git"
-  },
+
   "keywords": [
     "alura",
     "alurageek",
@@ -17,12 +14,10 @@
     "javascript",
     "API"
   ],
-  "author": "Sofidev, contact@itssofi.dev",
+  "author": "Jose",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/SofiDevO/alurageek-API/issues"
-  },
-  "homepage": "https://github.com/SofiDevO/alurageek-API#readme",
+ 
+
   "dependencies": {
     "cors": "^2.8.5",
     "json-serve": "^0.1.0",
